--- a/event-calender.html
+++ b/event-calender.html
@@ -45,7 +45,7 @@
                     distance.
                     On saturdays we do a long ride on our road bikes, always with a coffee stop about half way.</p>
                     <h2>Listen to us on the cycling podcast</h2>
-                    <iframe src="https://open.spotify.com/embed-podcast/show/2tvYRMktvIYH7CLg0vHTr4" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed-podcast/show/2tvYRMktvIYH7CLg0vHTr4" width="522" height="232" frameborder="0" allow="encrypted-media"></iframe>
                     <img src="./assets/images/female-cyclists2.jpg" alt="image of female cylists">
             </div>
 
