--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <!--contact information form-->
             <div class="column">
                 <h2>Get the latest on news and events:</h2>
-                <form action="" method="GET">
+                <form action="signup-form" method="GET">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Your name.." required>
                     <label for="email">Email Adress</label>
